Fix #6524 - Break word overflow in contact display

--- a/src/sass/components/contact/contactDisplay.scss
+++ b/src/sass/components/contact/contactDisplay.scss
@@ -12,6 +12,8 @@
 }
 
 .contactDisplay-item-value {
+    word-wrap: break-word;
+    max-width: 55%;
 }
 
 .contactDisplay-item-value[data-key="adr"] {
